--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>todo</title>
-</head>
-<body>
-  <main>
-    <header>
-      <h1>todos</h1>
-      <input
-        placeholder="Things need to be DONE!"
-        autofocus
-        class="new-todo"
-      >
-    </header>
-  </main>
-  <footer>
-    <p>This is a Placeholder</p>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>todo</title>
+  </head>
+  <body>
+    <main class="todo-app">
+      <header>
+        <h1>todos</h1>
+        <input
+          placeholder="Things need to be DONE!"
+          autofocus
+          class="new-todo"
+          data-todo='new'
+        >
+      </header>
+      <section class="todo-main">
+        <ul class="todo-list" data-todo="list">
+          <li>Task1</li>
+          <li>Task2</li>
+          <li>Task3</li>
+        </ul>
+      </section>
+    </main>
+    <footer class="info">
+      <p>This is a Placeholder for footer</p>
+    </footer>
+    <script src="app.js"></script>
+  </body>
 </html>
